--- a/views/김민서_임시_파일.ejs
+++ b/views/김민서_임시_파일.ejs
@@ -1,4 +1,5 @@
-<!-- 코드 작업하기 위한 임시 파일을 생성한 것으로 신경 안써도 됩니다. -->
+<!-- 코드 작업하기 위한 임시 파일을 생성한 것으로 신경 안써도 됩니다.
+작업 후 지울예정 -->
 
 <main class="con-main">
     <header class="search-bar">
