--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -1,91 +1,54 @@
 <main class="con-main">
-    <header class="search-bar">
-        <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색" onkeyup="printName()">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
-        </div>
-        <button id="btn" class="search-btn" type="submit">검색</button>
-    </header>
-    <article class="subway-con">
-        <div style="text-align: left; padding: 10px 22px;">
-            <form style="display: inline-block;" method="post">
-                <select id="subwayLine" style="font-size: 20px;" onkeyup="handleOnChange(this)">
-                    <option value="1호">1호선</option>
-                    <option value="2호">2호선</option>
-                    <option value="3호">3호선</option>
-                    <option value="4호">4호선</option>
-                    <option value="5호">5호선</option>
-                    <option value="6호">6호선</option>
-                    <option value="7호">7호선</option>
-                    <option value="8호">8호선</option>
-                    <option value="9호">9호선</option>
-                    <option value="경의중앙">경의중앙선</option>
-                    <option value="경춘">경춘선</option>
-                    <option value="수인분당">수인분당선</option>
-                    <option value="서해">서해선</option>
-                    <option value="신분당">신분당선</option>
-                    <option value="우이신설">우이신설선</option>
-                </select>
-            </form>
-            <form style="display: inline-block; " >
-                <select style="font-size: 20px;">
-                    <option value="1">상행</option>
-                    <option value="2">하행</option>
-                </select>
-            </form>
-        </div>
-        <div class="subway-line1 lineNum_3"></div>
-
-        <div class="subway-line-con lineNum_3">
-            <div class="line-info" id="line-inf">
-                호선 정보
+    <form style="display: inline-block" id="SubwayForm" method="post" action="/Subway">
+        <div class="search-bar">
+            <div class="con-search">
+                <img class="searchIcon" src="searchIcon.svg" alt="" />
+                <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" placeholder="역 검색" />
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset" />
             </div>
-            <div id="station-info" class="station-info">
-                역
-            </div>
-            <div class="subway-num">
-                열차 번호
-            </div>
+            <button id="btn" class="search-btn" type="submit">검색</button>
         </div>
-
-        <div class="subway-line2 lineNum_3">
-            행선지
+        <article class="subway-con">
+            <div style="text-align: left; padding: 10px 22px">
+                <form style="display: inline-block" method="post">
+                    <select id="SubwayLine" style="font-size: 20px" name="subwayLine">
+                        <option value="1호선">1호선</option>
+                        <option value="2호선">2호선</option>
+                        <option value="3호선">3호선</option>
+                        <option value="4호선">4호선</option>
+                        <option value="5호선">5호선</option>
+                        <option value="6호선">6호선</option>
+                        <option value="7호선">7호선</option>
+                        <option value="8호선">8호선</option>
+                        <option value="9호선">9호선</option>
+                        <option value="경의중앙선">경의중앙선</option>
+                        <option value="경춘선">경춘선</option>
+                        <option value="수인분당선">수인분당선</option>
+                        <option value="서해선">서해선</option>
+                        <option value="신분당선">신분당선</option>
+                        <option value="우이신설선">우이신설선</option>
+                    </select>
+                </form>
+                <form style="display: inline-block">
+                    <select id="updnLine" style="font-size: 20px" name="updnLine">
+                        <option value="1">상행</option>
+                        <option value="2">하행</option>
+                    </select>
+                </form>
+            </div>
+        </article>
+    </form>
+    <div id="resultSubway" class="resultSubway">
+        <div class="subway_img_group">
+            <div id="leftcon" class=""></div>
+            <div id="midcon" class="">
+                <div id="subwayId" class="line-info">호선 정보</div>
+                <div id="stationNm" class="station-info">현재 역</div>
+            </div>
+            <div id="ringthcon" class=""></div>
         </div>
-    </article>
-    <div class="subway-time-info">
-        <div>조회 시간 : </div>
-        <div>지연 시간 : </div>
+        <div class="subway_text_group"></div>
     </div>
-    <br>
-    <!-- <form style="display: block;">
-        <form>
-            <label for="subwayLine">노선:</label>
-            <select id="subwayLine">
-                <option value="1호선" selected>1호선</option>
-                <option value="2호선">2호선</option>
-                <option value="3호선">3호선</option>
-                <option value="4호선">4호선</option>
-                <option value="5호선">5호선</option>
-                <option value="6호선">6호선</option>
-                <option value="7호선">7호선</option>
-                <option value="8호선">8호선</option>
-                <option value="9호선">9호선</option>
-                <option value="경의중앙선">경의중앙선</option>
-                <option value="공항철도">공항철도</option>
-                <option value="경춘선">경춘선</option>
-                <option value="수인분당선">수인분당선</option>
-                <option value="신분당선">신분당선</option>
-                <option value="우이신설선">우이신설선</option>
-                <option value="서해선">서해선</option>
-            </select>
-            <br>
-            <button type="button" onclick="getSubwayTime()">조회</button>
-        </form>
-        <div>행선지(종점)</div>
-        <div>열차 번호</div>
-        <div>지연 정보</div>
-        <div id="result"></div>
-    </form> -->
+    <br />
 </main>
 <script src="Subway.js"></script>
