--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -69,7 +69,7 @@
         <div id="map" style="z-index: 0"></div>
     </body>
     <div class="tg" id="imageContainer" style="display: none;">
-        <img src="smap_sg_all.png" id="image-display" class="photo" width="100%" height="100%">
+        <img src="smap_sg_all.png" id="image-display" class="photo">
     </div>
         <!-- <img src="smap_sg_all.png" id="image-display" width="100%" height="100%"> -->
     <script src="Main.js"></script>
